[tool.poetry]
name = "railoslauncher"
version = "0.1.5"
description = "Discord Launcher for Railway Operation Simulator"
authors = [" Kristian Zarębski <krizar312@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
toml = "^0.10.2"
discordsdk = "^0.2.5"
railostools = {git = "https://github.com/Railway-Op-Sim/railostools.git", subdirectory="python", tag = "v0.5.7"}
pycountry = "^22.3.5"
configparser = "^5.3.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
