[project]
name = "railoslauncher"
version = "0.2.0"
description = "Discord Launcher for Railway Operation Simulator"
authors = [
    {name = "Kristian Zarębski",email = "krizar312@gmail.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "railostools @ git+https://github.com/Railway-Op-Sim/railostools.git@v0.6.0#subdirectory=python",
    "pycountry (>=24.6.1,<25.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "discordsdk @ git+https://github.com/artemis-beta/py-discord-sdk.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

